teste_3_plataformas/vivado_hls.log

****** Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC v2019.1 (64-bit)
  **** SW Build 2552052 on Fri May 24 14:47:09 MDT 2019
  **** IP Build 2548770 on Fri May 24 18:01:18 MDT 2019
    ** Copyright 1986-2019 Xilinx, Inc. All Rights Reserved.

source /opt/xilinx/Vivado/2019.1/scripts/vivado_hls/hls.tcl -notrace
INFO: [HLS 200-10] Running '/opt/xilinx/Vivado/2019.1/bin/unwrapped/lnx64.o/vivado_hls'
INFO: [HLS 200-10] For user 'vivado' on host 'lesc-server' (Linux_x86_64 version 4.15.0-88-generic) on Mon Apr 06 17:14:11 UTC 2020
INFO: [HLS 200-10] On os Ubuntu 18.04.2 LTS
INFO: [HLS 200-10] In directory '/home/vivado/HLStools/teste_3_plataformas'
[2Kvivado_hls> [12C[2Kvivado_hls> o[13C[2K
[1;32mopen 
open_project 
open_solution 
[0m[32mobj2yaml.exe 
objcopy 
objcopy.exe 
objdump 
objdump.exe 
od 
od.exe 
on_ac_power 
open 
openssl 
openssl.exe 
openvpn 
openvt 
orbd 
os-prober 
osage 
ostinato 
overlayroot-chroot 
ownership 
[0m
[2Kvivado_hls> o[13C[2Kvivado_hls> op[14C[2Kvivado_hls> open[16C[2Kvivado_hls> open_[17C[2Kvivado_hls> open_p[18C[2Kvivado_hls> open_project[24C[2Kvivado_hls> open_project [25C[2Kvivado_hls> open_project p[26C[2Kvivado_hls> open_project pr[27C[2Kvivado_hls> open_project prod_matrix/[37C[2Kvivado_hls> open_project prod_matrix[36C
INFO: [HLS 200-10] Opening project '/home/vivado/HLStools/teste_3_plataformas/prod_matrix'.
0
[2Kvivado_hls> [12C[2Kvivado_hls> o[13C[2Kvivado_hls> oe[14C
No match found.
[2Kvivado_hls> oep[15C[2Kvivado_hls> oe[14C[2Kvivado_hls> o[13C[2Kvivado_hls> [12C[2Kvivado_hls> c[13C[2Kvivado_hls> c [14C[2Kvivado_hls> c p[15C[2Kvivado_hls> c [14C[2Kvivado_hls> c[13C[2Kvivado_hls> cd[14C[2Kvivado_hls> cd [15C[2Kvivado_hls> cd p[16C[2Kvivado_hls> cd pr[17C[2Kvivado_hls> cd prod_matrix/[27C[2Kvivado_hls> cd prod_matrix[26C
[2Kvivado_hls> [12C[2Kvivado_hls> a[13C[2Kvivado_hls> ad[14C[2Kvivado_hls> add[15C[2Kvivado_hls> add_[16C[2Kvivado_hls> add_f[17C[2Kvivado_hls> add_files[21C[2Kvivado_hls> add_files [22C[2Kvivado_hls> add_files p[23C[2Kvivado_hls> add_files pr[24C[2Kvivado_hls> add_files prod_matrix.c[35C
INFO: [HLS 200-10] Adding design file 'prod_matrix.c' to the project
[2Kvivado_hls> [12C[2Kvivado_hls> o[13C[2Kvivado_hls> op[14C[2Kvivado_hls> ope[15C[2Kvivado_hls> open[16C[2Kvivado_hls> open_[17C[2Kvivado_hls> open_S[18C[2Kvivado_hls> open_S[18C[2Kvivado_hls> open_[17C[2Kvivado_hls> open_s[18C[2Kvivado_hls> open_solution[25C[2Kvivado_hls> open_solution [26C[2Kvivado_hls> open_solution s[27C[2K
[35mscriptsRoot 
[0m[1;32mscan 
seek 
set 
set_clock_uncertainty 
set_directive_allocation 
set_directive_array_map 
set_directive_array_partition 
set_directive_array_reshape 
set_directive_clock 
set_directive_data_pack 
set_directive_dataflow 
set_directive_dependence 
set_directive_expression_balance 
set_directive_function_instantiate 
set_directive_inline 
set_directive_interface 
set_directive_latency 
set_directive_loop_flatten 
set_directive_loop_merge 
set_directive_loop_tripcount 
set_directive_occurrence 
set_directive_pipeline 
set_directive_protocol 
set_directive_reset 
set_directive_resource 
set_directive_stable 
set_directive_stream 
set_directive_top 
set_directive_unroll 
set_param 
set_part 
set_top 
socket 
source 
split 
string 
subst 
switch 
[0m
[2Kvivado_hls> open_solution s[27C[2Kvivado_hls> open_solution so[28C[2Kvivado_hls> open_solution sol[29C
INFO: [HLS 200-10] Creating and opening solution '/home/vivado/HLStools/teste_3_plataformas/prod_matrix/sol'.
/home/vivado/HLStools/teste_3_plataformas/prod_matrix/vivado_hls.app
[2Kvivado_hls> [12C[2Kvivado_hls> c[13C[2Kvivado_hls> ca[14C[2Kvivado_hls> cat[15C[2Kvivado_hls> cat [16C[2Kvivado_hls> cat m[17C[2Kvivado_hls> cat [16C[2Kvivado_hls> cat p[17C[2Kvivado_hls> cat pr[18C[2K
[35mpragma_formats 
pragma_names_hidden 
[0m[0mprod_matrix.c 
[0m
[2Kvivado_hls> cat pr[18C
/bin/cat: pr: No such file or directory
[2Kvivado_hls> [12C[2Kvivado_hls> cat pr[18C[2Kvivado_hls> cat pro[19C[2Kvivado_hls> cat prod_matrix.c[29C
#include <stdlib.h>
#include <stdio.h>
#define n 100

component void prod_matrix(__int32_t v[100][100], __int32_t r[100][100], int row, int col) {
    int i, j, k;
    for (i = 0; i < row; ++i) {
        for (j = 0; j < col; ++j) {
            for (k = 0; k < row; ++k)
                r[i][j] = v[i][k] * v[k][j]; 
        }
    }
}

int main() {

    int n = 5;
    int v[n][n];
    int r[n][n];
    int i, j;
    for (i = 0; i < n; ++i) {
        for (j = 0; j <n; ++j) {
            v[i][j] = i * n + j;
        }
    }

    prod_matrix(v, r, n, n);

    for (i = 0; i < n; ++i) {
        for (j = 0; j <n; ++j) {
            printf("%d ", v[i][j]);
        }
        printf("\n");
    }

    return 0;
}
[2Kvivado_hls> [12C[2Kvivado_hls> s[13C[2Kvivado_hls> se[14C[2Kvivado_hls> set[15C[2Kvivado_hls> set_[16C[2Kvivado_hls> set_t[17C[2Kvivado_hls> set_to[18C[2Kvivado_hls> set_top[19C[2Kvivado_hls> set_top [20C[2Kvivado_hls> set_top prod_matrix[31C
[2Kvivado_hls> [12C[2Kvivado_hls> set_part {xc7k160t-fbg484-1}[40C
INFO: [HLS 200-10] Setting target device to 'xc7k160t-fbg484-1'
[2Kvivado_hls> [12C[2Kvivado_hls> create_clock -period 5 -name default[48C
INFO: [SYN 201-201] Setting up clock 'default' with a period of 5ns.
[2Kvivado_hls> [12C[2Kvivado_hls> create_clock -period 10ns -name default[51C
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
[2Kvivado_hls> [12C[2Kvivado_hls> c[13C[2Kvivado_hls> cy[14C[2Kvivado_hls> c[13C[2Kvivado_hls> cs[14C[2Kvivado_hls> csy[15C[2Kvivado_hls> csynth_design[25C
INFO: [SCHED 204-61] Option 'relax_ii_for_timing' is enabled, will increase II to preserve clock frequency constraints.
INFO: [HLS 200-10] Analyzing design file 'prod_matrix.c' ... 
ERROR: [HLS 200-70] Compilation errors found: In file included from prod_matrix.c:1:
prod_matrix.c:5:1: error: unknown type name 'component'
component void prod_matrix(__int32_t v[100][100], __int32_t r[100][100], int row, int col) {
^
prod_matrix.c:5:11: error: expected identifier or '('
component void prod_matrix(__int32_t v[100][100], __int32_t r[100][100], int row, int col) {
          ^
prod_matrix.c:17:9: error: expected identifier or '('
    int 100 = 5;
        ^
3 errors generated.
Failed during preprocessing.
[2Kvivado_hls> [12CINFO: [Common 17-206] Exiting vivado_hls at Mon Apr  6 17:15:43 2020...
